--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -35,6 +35,21 @@
       "Designer": "Role:Designer",
       "FSAdmin": "Role:FSAdmin"
     },
+    "shop_url": {
+      "retail": "pepsi-print-beta.myshopify.com",
+      "fs": "www.pepsicomod.com"
+    },
+    "product_template_file_upload_details": {
+      "Retail": {
+        "file_size": "2",
+        "file_types": "jpg,jpeg,png,pdf,gif"
+      },
+      "MOD": {
+        "file_size": "20",
+        "file_types": "eps,psd,ai"
+      }
+    },
+    "mod_channels": "Restaurent,Rec & Retail,Workplace,C&U,Distributor,Franchise,National Customer",
     "Unsupported_Browser_Msg": "You are using an unsupported browser and may have difficulty with your site experience. Please switch to Chrome.",
     "Main-Menu": {
       "Brands": "amp,\nany-brand,\naquafina,\nbig-red,\nbrisk,\nbundeburg,\n1893,\ncalebs-kola,\ncrush,\ndiet-pepsi,\ndr-pepper,\nfruit-shoot,\ngatorade,\nkickstart,\nlemon-lemon\nlipton,\nmanzanita-sol,\nmetahune-water,\nmist-twst,\nmountain-dew,\nmuscle-milk,\nno-fear-energy,\no-n-e,\npact,\npaso-de-los-toro,\npepsi,\nportfolio,\npropel,\npure-leaf,\nlifewtr,\nrockstar,\nschweppes,\nsobe,\nstarbucks,\nstubborn-soda,\ntampico,\nxyience,\nwater+\n",
@@ -291,9 +306,9 @@
     "customer": {
       "account": "My Account",
       "log_out": "Log out",
-      "log_in": "Log in",
-      "create_account": "Create account",
-      "or": "Or"
+      "log_in": "Login",
+      "create_account": "Create Account",
+      "or": "or"
     },
     "footer": {
       "blog_title": "",
